Obligatories/Q5/LP/Practica/tests/SyntaxError/test5.scm
(define (add a b)
    (+ a b)
)

(define x 10)
(define y 20

(display (add x y))